<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RecBasPro">

    <TextView
        android:id="@+id/textViewCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_code"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/textView"
        app:layout_constraintEnd_toStartOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_init"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewCode"
        app:layout_constraintTop_toBottomOf="@id/marge"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/editTextInput"
        app:layout_constraintEnd_toStartOf="@id/editTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextInput" />


    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="name"
        android:hint="@string/enter_text"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewName"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/textViewLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_loc"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/editTextLoc"
        app:layout_constraintEnd_toStartOf="@id/editTextLoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextLoc" />

    <EditText
        android:id="@+id/editTextLoc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="localisation"
        android:hint="@string/enter_text"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewLoc"
        app:layout_constraintTop_toBottomOf="@id/editTextInput" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_price"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/editTextPrice"
        app:layout_constraintEnd_toStartOf="@id/editTextPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextPrice" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="price"
        android:hint="@string/enter_text"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewPrice"
        app:layout_constraintTop_toBottomOf="@id/editTextLoc" />

    <TextView
        android:id="@+id/textViewPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_photo"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/buttonImport"
        app:layout_constraintEnd_toStartOf="@id/buttonImport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonImport" />

    <Button
        android:id="@+id/buttonImport"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_border"
        android:text="@string/import_document"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewPhoto"
        app:layout_constraintTop_toBottomOf="@id/editTextPrice" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/button_border"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonImport" />
    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/button_border"
        android:text="@string/button_return"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSave" />


    <View
        android:id="@+id/marge"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>